<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ic_name" translatable="false">Android-x86 settings</string>
    <string name="android_x86_dashboard_title" translatable="false">Android-x86 options</string>
    <string name="android_x86_dashboard_summary" translatable="false">Native bridge, statistics</string>
    <string name="title_switch_enable_pc_mode">Enable pc mode</string>
    <string name="title_switch_enable_bd_nav_bar">Enable Boringdroid Navigation Bar</string>
    <string name="title_category_pc_mode">PC Mode</string>
    <string name="key_category_pc_mode">category_pc_mode</string>
    <string name="key_category_bd_systemui">category_bd_systemui</string>
    <string name="key_switch_enable_bd_nav_bar">enable_bd_nav_bar</string>
    <string name="title_category_bd_systemui">Boringdroid SystemUI</string>
    <string name="key_switch_enable_pc_mode">enable_pc_mode</string>
    <string name="key_category_bd_about">About</string>
    <string name="title_category_bd_about">About</string>
    <string name="title_bd_developer">Developer</string>
    <string name="summary_bd_developer">The Boringdroid is developed by utzcoz</string>
    <string name="title_bd_developer_github">GitHub</string>
    <string name="key_bd_developer">key_bd_developer</string>
    <string name="key_bd_github">key_bd_github</string>
    <string name="title_bd_github">GitHub</string>
    <string name="summary_bd_github">https://github.com/boringdroid</string>
    <string name="key_bd_group">key_bd_group</string>
    <string name="key_android_x86_enable_native_bridge">android_x86_enable_native_bridge</string>
    <string name="title_android_x86_enable_native_bridge">Enable native bridge</string>
    <string name="summary_android_x86_enable_native_bridge">To support apps with arm native libraries</string>
    <string name="key_android_x86_collect_anonymous_hw_info">key_android_x86_collect_anonymous_hw_info</string>
    <string name="summary_android_x86_collect_anonymous_hw_info">To collect the hardware information of this device and send to Android-x86 statistics</string>
    <string name="title_android_x86_collect_anonymous_hw_info">Collect anonymous hardware information</string>
    <string name="key_android_x86_collect_anonymous_app_usage">key_android_x86_collect_anonymous_app_usage</string>
    <string name="summary_android_x86_collect_anonymous_app_usage">To collect the apps usage information and send to Android-x86 statistics</string>
    <string name="title_android_x86_collect_anonymous_app_usage">Collect anonymous apps usage</string>

    <string name="android_x86_about_dashboard_title" translatable="false">About Android-x86</string>
    <string name="android_x86_about_dashboard_summary" translatable="false">OpenGL, manufacture</string>
</resources>