<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2020 The Android-x86 Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="@string/key_android_x86_enable_native_bridge"
        app:summary="@string/summary_android_x86_enable_native_bridge"
        app:title="@string/title_android_x86_enable_native_bridge"
        app:persistent="false" />

    <SwitchPreferenceCompat
        app:key="@string/key_android_x86_collect_anonymous_hw_info"
        app:summary="@string/summary_android_x86_collect_anonymous_hw_info"
        app:title="@string/title_android_x86_collect_anonymous_hw_info"
        app:persistent="false" />

    <SwitchPreferenceCompat
        app:key="@string/key_android_x86_collect_anonymous_app_usage"
        app:summary="@string/summary_android_x86_collect_anonymous_app_usage"
        app:title="@string/title_android_x86_collect_anonymous_app_usage"
        app:persistent="false" />
</PreferenceScreen>
